# Library-Notifications-Service

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/: ci-workflow.yml
.github/workflows/: harbour.yml  pr-tests.yml
src/: api.py  cli.py  env.py  utils.py
src/providers/: README.md  cambridge_fetchfiles.py  cli.py  library_newsletter.py
src/providers/cambridge/: README.md  cambridge_cli.py  cli.py  functions.py  get_test_data.py  test_utils.py  utils.py
src/providers/springer/: README.md  cli.py  functions.py  get_test_data.py  springer_cli.py  test_utils.py  utils.py
src/providers/taylor/: cli.py  utils.py
tests/: test_newsletter.py
