[tool.poetry]
name = "library-notifications-service"
version = "0.0.1"
description = ""
authors = ["cern-sis-ts <sis-ts-admin@cern.ch>"]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.6"
requests = "^2.31.0"
py = "^1.11.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
mocker = "^1.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
